care/force-app/main/default/objects/Feedback__c/fields/Browsers_and_Versions__c.field-meta.xml
<CustomField>
    <fullName>Browsers_and_Versions__c</fullName>
    <description>SFORCE-2340</description>
    <inlineHelpText>Indicate which browser and browser version being used when bug experienced, i.e. Chrome, Firefox, Internet Explorer, Safari, etc.</inlineHelpText>
    <label>Browsers and Versions</label>
    <type>TextArea</type>
</CustomField>