care/force-app/main/default/objects/Feedback__c/fields/BUC_JOB_ID__c.field-meta.xml
<CustomField>
    <fullName>BUC_JOB_ID__c</fullName>
    <description>SFORCE-8713</description>
    <label>BUC JOB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>