care/force-app/main/default/objects/Feedback__c/fields/Devices__c.field-meta.xml
<CustomField>
    <fullName>Devices__c</fullName>
    <description>SFORCE-2340</description>
    <inlineHelpText>Indicate device(s) used when bug happened, i.e. iOS, Android, App, Desktop/Laptop, Tablet, iPad, MW, etc</inlineHelpText>
    <label>Devices</label>
    <type>TextArea</type>
</CustomField>