care/force-app/main/default/objects/Feedback__c/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assisted Search</fullName>
            </value>
            <value>
                <fullName>Autorenewal</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Background Checks</fullName>
            </value>
            <value>
                <fullName>Backup Care</fullName>
            </value>
            <value>
                <fullName>Benefits Communication</fullName>
            </value>
            <value>
                <fullName>Benefits Fair</fullName>
            </value>
            <value>
                <fullName>BUC: ABUC Provider Quality</fullName>
            </value>
            <value>
                <fullName>BUC: Agency Provider Quality</fullName>
            </value>
            <value>
                <fullName>BUC: Center Quality</fullName>
            </value>
            <value>
                <fullName>BUC: Policies &amp; Experience</fullName>
            </value>
            <value>
                <fullName>BUC: Product</fullName>
            </value>
            <value>
                <fullName>BUC: Service</fullName>
            </value>
            <value>
                <fullName>BUC: Trusted Provider Quality</fullName>
            </value>
            <value>
                <fullName>C@W App</fullName>
            </value>
            <value>
                <fullName>C@W Portal</fullName>
            </value>
            <value>
                <fullName>Consumer Backup Care</fullName>
            </value>
            <value>
                <fullName>COVID-related</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Event Care</fullName>
            </value>
            <value>
                <fullName>Experience Offsite</fullName>
                <label>Experience - Offsite</label>
            </value>
            <value>
                <fullName>Experience Onsite</fullName>
                <label>Experience - Onsite</label>
            </value>
            <value>
                <fullName>Home Pay</fullName>
            </value>
            <value>
                <fullName>HR Dashboard</fullName>
            </value>
            <value>
                <fullName>Jobs</fullName>
            </value>
            <value>
                <fullName>Marketing/Admin Emails</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>Policies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>