care/force-app/main/default/objects/Feedback__c/fields/Feedback_Theme__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Theme__c</fullName>
    <description>Pick the theme the best applies to the member&apos;s feedback, according to the category. If theme doesn&apos;t exist, can leave blank</description>
    <label>Feedback Theme</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feedback_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Able to post specific needs</fullName>
            </value>
            <value>
                <fullName>Above and beyond</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Affordable</fullName>
            </value>
            <value>
                <fullName>Agency Error</fullName>
            </value>
            <value>
                <fullName>App Lacks Features</fullName>
            </value>
            <value>
                <fullName>Apply with Credits</fullName>
            </value>
            <value>
                <fullName>App Not User Friendly</fullName>
            </value>
            <value>
                <fullName>Approval takes too long</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>App User Friendly</fullName>
            </value>
            <value>
                <fullName>Auto Jobs</fullName>
            </value>
            <value>
                <fullName>Availability calendar is hard to use</fullName>
            </value>
            <value>
                <fullName>Availability not accurate/updated</fullName>
            </value>
            <value>
                <fullName>Benefit Changes</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Benefits Portal</fullName>
            </value>
            <value>
                <fullName>BGC on Seeker</fullName>
            </value>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Access Messages</fullName>
            </value>
            <value>
                <fullName>Cancelled and still charged</fullName>
            </value>
            <value>
                <fullName>Candidates not screened well enough</fullName>
            </value>
            <value>
                <fullName>Cannot personalize messages</fullName>
            </value>
            <value>
                <fullName>Cannot Understand rep</fullName>
            </value>
            <value>
                <fullName>Care.com Error</fullName>
            </value>
            <value>
                <fullName>Care Assistant</fullName>
            </value>
            <value>
                <fullName>Care Chat</fullName>
            </value>
            <value>
                <fullName>Care Check</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>