care/force-app/main/default/objects/Feedback__c/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <description>Jira number associated with Bug reported, if Jira already filed</description>
    <inlineHelpText>Jira number associated with Bug reported, if Jira already filed</inlineHelpText>
    <label>Jira</label>
    <length>20</length>
    <type>Text</type>
</CustomField>