care/force-app/main/default/objects/Feedback__c/recordTypes/CareatWork.recordType-meta.xml
<RecordType>
    <fullName>CareatWork</fullName>
    <active>true</active>
    <label>CareatWork</label>
</RecordType>