care/force-app/main/default/objects/Feedback__c/recordTypes/International.recordType-meta.xml
<RecordType>
    <fullName>International</fullName>
    <active>true</active>
    <label>International</label>
</RecordType>