care/force-app/main/default/objects/Feedback__c/recordTypes/US_Consumer.recordType-meta.xml
<RecordType>
    <fullName>US_Consumer</fullName>
    <active>true</active>
    <label>US Consumer</label>
</RecordType>