care/force-app/main/default/objects/Feedback__c/validationRules/BUC_Job_ID_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BUC_Job_ID_required</fullName>
    <active>true</active>
    <description>SFORCE-8775
If the Record Type is CareatWork and the BUC Job ID field is Blank, then prevent saving the record.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;CareatWork&quot;,
isBlank(BUC_JOB_ID__c)
)</errorConditionFormula>
    <errorMessage>The &quot;Buc Job ID&quot; field is required.</errorMessage>
</ValidationRule>